CSVManager: substitui um nome restrito e otimiza a conversão de uma lista